--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@supabase/supabase-js": "^2.42.0",
     "d3": "^7.8.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-autosuggest": "^10.1.0",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18",
+    "react-plotly.js": "^2.6.0",
+    "react-select": "^5.8.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-autosuggest": "^10.1.11",
     "@types/react-dom": "^18",
+    "@types/react-plotly.js": "^2.6.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
